Add out-of-order declarations